--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.0.1
 djangorestframework==3.14.0
 jdatetime==4.1.1
 pillow==10.2.0
+psycopg2==2.9.9
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.9.0
