--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 dj-database-url==2.1.0
 Django==5.0.1
+django-cors-headers==4.3.1
 djangorestframework==3.14.0
 jdatetime==4.1.1
 pillow==10.2.0
