--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ django-js-asset==2.2.0
 djangorestframework==3.14.0
 jdatetime==4.1.1
 pillow==10.2.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.9.0
+tzdata==2024.2
